--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
     <meta name="description" content="p-description" />
     <meta property="og:title" content="p-title" />
     <meta property="og:url" content="p-url" />
+		<style>
+		table {
+			border-collapse: collapse;
+			background: white;
+			color: black;
+			
+		}
+		th,
+		td {
+			font-weight: bold;
+			border:dotted 1px gray;
+		}
+		tbody>tr:nth-child(odd){
+    background-color:#e2e2e2;}
+		td:nth-child(even){
+   #background-color:#f1f1f1;
+   #font-weight:bold}
+   		td:nth-child(1){
+   color:tomato;}
+	</style>
 </head>
 <body>
     <div class="main">
@@ -25,23 +45,196 @@
         </div>
         <hr>
 		<img src="ssnp.jpg" alt="ssnp">
-        <p class="subtext">Namaste, Please join in 2023</p>
+        <p class="subtext"><b>Click to join <a href="https://chat.whatsapp.com/B8wON3Vn0I2BdnKu2C8uTp"> WhatsApp Group</a></b> </p>
 
         <h2><i class="fas fa-map-marker-alt"></i> Location</h2>
         <p style="color:blue" style="font-size:50px"><b>Hillcrest Ave</b></p>
         
 
         <h2><i class="fas fa-calendar-alt"></i> Date</h2>
-        <p style="color:blue" style="font-size:50px"><b>on puurNimaa (full-moon)</b></p>
+        <p style="color:blue" style="font-size:50px"><b>on puurNimaa पूर्णिमा (full-moon) in 2023</b></p>
 
         <h2><i class="fas fa-clock"></i> Time</h2>
         <p style="color:blue" style="font-size:50px"><b>9 pm</b></p>
 
-	    <p><b>Click <a href="https://form.jotform.com/223484504320246"> to sign up puujaa at your home</a></b> </p>
+	    <!--
+		<p><b>Click to sign up <!-- for <a href="https://form.jotform.com/223484504320246"> puujaa at your home</a> 
+		</b> </p> -->
+		
+	<table bgcolor="lightgrey" align="center"
+		x-cellspacing="21" x-cellpadding="21">
 
-        <p><b>Click <a href="https://chat.whatsapp.com/B8wON3Vn0I2BdnKu2C8uTp"> to join WhatsApp Group</a></b> </p>
+		<!-- The tr tag is used to enter
+			rows in the table -->
 
-        <h4>Organized by <a href="http://ssnp.ml" target="_blank">SB volunteers</a>at Hillcrest Ave</a></h4>
+		<!-- It is used to give the heading to the
+			table. We can give the heading to the
+			top and bottom of the table -->
+
+		<caption align="top">
+			<!-- Here we have used the attribute
+				that is style and we have colored
+				the sentence to make it better
+				depending on the web page-->
+				Click to sign up
+		</caption>
+
+		<!-- Here th stands for the heading of the
+			table that comes in the first row-->
+
+		<!-- The text in this table header tag will
+			appear as bold and is center aligned-->
+
+		<thead>
+			<tr>
+				<!-- Here we have applied inline style
+					to make it more attractive-->
+				<th style="color: white; background: orange;">
+					पूर्णिमा</th>
+				<th style="color: white; background: tomato;">
+					Sun</th>
+				<th style="color: white; background: tomato;">
+					Mon</th>
+				<th style="color: white; background: tomato;">
+					Tue</th>
+				<th style="color: white; background: tomato;">
+					Wed</th>
+				<th style="color: white; background: tomato;">
+					Thu</th>
+				<th style="color: white; background: tomato;">
+					Fri</th>
+				<th style="color: white; background: tomato;">
+					Sat</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>January</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=January">6th</a></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>February</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=February">4th</a></td>
+			</tr>
+			<tr>
+				<td>March</td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=March">6th</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>April</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=April">5th</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>May</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=May">4th</a></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>June</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=June">3rd</a></td>
+			</tr>
+			<tr>
+				<td>July</td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=July">2nd</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>August</td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=August+1st">1st</a></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=August+30th">30th</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>			
+			<tr>
+				<td>September</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=September">28th</a></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>October</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=October">28th</a></td>
+			</tr>
+			<tr>
+				<td>November</td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=November">26th</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>December</td>
+				<td></td>
+				<td></td>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScl1QTPIaMMKNe5Tmg3Rzc5QNj9Pzyzh0RPzesFoA5XGXk-Rg/viewform?usp=pp_url&entry.1072885979=December">26th</a></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>			
+		</tbody>
+	</table>
+	
+        
+
+        <h4>Organized by <a href="http://ssnk.ml" target="_blank">SB volunteers</a> at Hillcrest Ave</a></h4>
     </div>
 </body>
 </html>
