--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>श्री-सत्यनारायणकथा @ Hillcrest</title>
     <link href="style.css" rel="stylesheet">
     <!-- ****** faviconit.com favicons ****** -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+
     <!-- ****** faviconit.com favicons ****** -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="description" content="p-description" />
-    <meta property="og:title" content="p-title" />
-    <meta property="og:url" content="p-url" />
+    <meta name="description" content="श्री-सत्यनारायणकथा" />
+    <meta property="og:title" content="at Hillcrest Ave" />
+    <meta property="og:url" content="https://ssnp.ml/" />
 		<style>
 		table {
 			border-collapse: collapse;
